import { Component, OnInit } from '@angular/core';

@Component({
  selector: 'contracts-page',
  templateUrl: './contracts-page.html',
  styleUrls: ['./contracts-page.scss']
})
export class ContractsPage implements OnInit {

  constructor() { }

  ngOnInit(): void {
  }

}
